Build vector index on disk